<resources>
    <!-- App name, resources -->
    <string name="app_name">Tower Defense</string>

    <!-- Main menu -->
    <string name="startButton">Start Game</string>
    <string name="instructionsButton">Instructions</string>
    <string name="highScoreButton">High Scores</string>
    <string name="exitButton">Exit Game</string>
    <string name="loginButton">Login</string>
    <string name="username">Username: </string>
    <string name="loggedOutStatus">Please Log in before starting game.</string>

    <!-- Level select Screen -->
    <string name="w1s1">World 1 - Stage 1</string>
    <string name="w1s2">World 1 - Stage 2</string>
    <string name="w1s3">World 1 - Stage 3</string>

    <!-- Instructions Screen -->
    <string name="instructionsTitle">Instructions</string>
    <string name="instructionsContent">
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
        Here are the instructions... Soon to come with pictures and such
    </string>
    <string name="back_InstructionsScreen">Back</string>

    <!-- High Score Screen -->
    <string name="highscoreTitle">High Scores</string>
    <string name="back_HighScoreScreen">Back</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="action_settings">Settings</string>

    <!-- Game Screens -->
    <string name="startRound">Start Round</string>
    <string name="buildFireTower">Building Fire Tower</string>
    <string name="buildFireTowerBody">Would you like to build a Fire Tower? It costs 100 gold.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
